--- a/src/index.css
+++ b/src/index.css
@@ -127,6 +127,8 @@ body, .app {
   margin: 0;
   padding: 0;
   list-style-type: none;
+  float: left;
+  margin-top: 60px;
 }
 .contact-list-item {
   padding: 20px;
